--- a/src/components/Forms/forms.module.css
+++ b/src/components/Forms/forms.module.css
@@ -21,3 +21,18 @@
   background:  #305996;;
   opacity: 1;
 }
+
+.btn {
+  padding: 8px 12px;
+  background: rgba(94, 99, 100, 0.884);
+  border-radius: 5px;
+  transition: .5s;
+  border: none;
+  margin-right: 5px;
+  cursor: pointer;
+}
+
+.btn:hover {
+  background: #52779bd0;
+  opacity: 1;
+}
