--- a/src/components/ProfileInfo/style.module.css
+++ b/src/components/ProfileInfo/style.module.css
@@ -1,4 +1,21 @@
-.profile{
+
+.profileInfo {
   display: flex;
-  margin-top: 10px;
+  align-items: flex-start;
+  justify-content: space-between;
+}
+
+.btn {
+  padding: 8px 12px;
+  background:  rgba(94, 99, 100, 0.884);
+  border-radius: 5px;
+  transition: .5s;
+  border: none;
+  margin-right: 5px;
+  cursor: pointer;
+}
+
+.btn:hover {
+  background: #52779bd0;
+  opacity: 1;
 }
