--- a/src/components/Forms/forms.module.css
+++ b/src/components/Forms/forms.module.css
@@ -1,3 +1,7 @@
+h1 {
+  text-align: center;
+}
+
 .auth, .registr {
     display: block;
     border: 1px solid #305996d0;
@@ -35,4 +39,98 @@
 .btn:hover {
   background: #52779bd0;
   opacity: 1;
+}
+
+.form {
+  max-height: 400px;
+  max-width: 600px;
+  margin: 0 auto;
+}
+
+.form input {
+  display: block;
+  box-sizing: border-box;
+  width: 100%;
+  border-radius: 4px;
+  border: 1px solid rgb(26, 24, 24);
+  padding: 10px 15px;
+  margin-bottom: 10px;
+  font-size: 14px;
+}
+
+.form label {
+  line-height: 20px;
+  display: block;
+  margin-bottom: 13px;
+  margin-top: 10px;
+  color: rgb(19, 18, 18);
+  font-size: 14px;
+  font-weight: 200;
+}
+
+.form button[type="submit"],
+.form input[type="submit"] {
+  cursor: pointer;
+  background: #344683;
+  color: white;
+  text-transform: uppercase;
+  border: none;
+  margin-top: 40px;
+  padding: 20px;
+  font-size: 16px;
+  font-weight: 100;
+  letter-spacing: 10px;
+}
+
+.form button[type="submit"]:hover,
+.form input[type="submit"]:hover {
+  background: #1643bf;
+}
+
+.form button[type="submit"]:active,
+.form input[type="button"]:active,
+.form input[type="submit"]:active {
+  transition: 0.3s all;
+  transform: translateY(3px);
+  border: 1px solid transparent;
+  opacity: 0.8;
+}
+
+.form input:disabled {
+  opacity: 0.4;
+}
+
+.form input[type="button"]:hover {
+  transition: 0.3s all;
+}
+
+.form button[type="button"] {
+  display: block;
+  appearance: none;
+  background: #333;
+  color: white;
+  border: none;
+  text-transform: uppercase;
+  padding: 10px 20px;
+  border-radius: 4px;
+}
+
+.form button {
+  display: block;
+  appearance: none;
+  margin-top: 40px;
+  border: 1px solid #333;
+  margin-bottom: 20px;
+  text-transform: uppercase;
+  padding: 10px 20px;
+  border-radius: 4px;
+}
+
+.form input[type='number'] {
+  -moz-appearance:textfield;
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
 }
