--- a/src/pages/Login/login.module.css
+++ b/src/pages/Login/login.module.css
@@ -1,8 +1,8 @@
 .login {
     position: absolute;
-    top: 30%;
+    top: 50%;
     left: 50%;
-    transform: translateX(-50%);
+    transform: translate(-50%, -50%);
     background: #fff;
     z-index: 22;
     /* margin-top: 20px; */
