--- a/src/pages/ProfilePage/profile.module.css
+++ b/src/pages/ProfilePage/profile.module.css
@@ -6,7 +6,7 @@
 
 .users {
     display: grid;
-    grid-template-columns: 50px 3fr 2fr 2fr 70px;
+    grid-template-columns: 50px 3fr 2fr 2fr;
     grid-template-rows: 80px;
     margin-top: 10px;
     grid-gap: 10px;
