--- a/src/components/FavoritesLSales/style.module.css
+++ b/src/components/FavoritesLSales/style.module.css
@@ -1,6 +1,6 @@
 .wrapper{
   display: grid;
-  grid-template-columns: repeat(5, 1fr);
+  grid-template-columns: repeat(4, 1fr);
   grid-auto-rows: auto;
   grid-gap: 10px;
 }
@@ -16,4 +16,20 @@
   width: 100%;
   height: 120px;
   background: rgb(136, 128, 128);
+}
+
+@media screen and (max-width: 768px) {
+  .wrapper{
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+@media screen and (max-width: 500px) {
+  .wrapper{
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+@media screen and (max-width: 350px) {
+  .wrapper{
+    grid-template-columns: repeat(1, 1fr);
+  }
 }
