--- a/src/components/Products/styles.module.css
+++ b/src/components/Products/styles.module.css
@@ -22,4 +22,22 @@
   background: rgb(136, 128, 128);
 }
 
+@media screen and (max-width: 768px) {
+  .wrapper{
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+@media screen and (max-width: 500px) {
+  .wrapper{
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+@media screen and (max-width: 300px) {
+  .wrapper{
+    grid-template-columns: repeat(1, 1fr);
+  }
+}
+
+
+
 
