--- a/src/components/pageTemplates/PageProfiles/style.module.css
+++ b/src/components/pageTemplates/PageProfiles/style.module.css
@@ -9,11 +9,15 @@
     display: flex;
     flex-direction: column;
     height: 100vh;
-    /* position: fixed; */
     width: 100%;
 }
 
-.content {
+.nav {
+    position: relative;
+    z-index: 60;
+}
+
+.sidebar {
     display: flex;
     width: 150px;
     flex-grow: 3;
@@ -29,6 +33,15 @@
 @media screen and (max-width: 900px) {
     .children {
         margin-top: 85px;
+    }
+}
+@media screen and (max-width: 768px) {
+    .children {
+        margin-left: 50px;
+    }
+    .sidebar {
+        display: flex;
+        width: 50px;
     }
 }
 
