--- a/src/pages/Subpages/style.module.css
+++ b/src/pages/Subpages/style.module.css
@@ -16,9 +16,27 @@
 }
 
 .img {
+  object-fit: cover;
   width: 100%;
-  height: 100px;
+  height: 120px;
   background: rgb(136, 128, 128);
+}
+
+
+@media screen and (max-width: 768px) {
+  .wrapper{
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+@media screen and (max-width: 500px) {
+  .wrapper{
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+@media screen and (max-width: 300px) {
+  .wrapper{
+    grid-template-columns: repeat(1, 1fr);
+  }
 }
 
 
