--- a/src/components/Header/styles.module.scss
+++ b/src/components/Header/styles.module.scss
@@ -1,27 +1,76 @@
 .header {
   margin: 0 auto;
-  padding: 21px 25px 28px 36px;
-  height: 75px;
+  padding: 21px 25px 21px 36px;
   background: #F2F2F2;
+  &Search {
+    display: none;
+    @media screen and (max-width: 768px) {
+      display: block;
+    }
+  }
+  @media screen and (max-width: 768px) {
+    padding: 18px 25px 18px 36px;
+  }
 }
 .menu {
   color: #4C5D87;
   display: flex;
   align-items: center;
   justify-content: space-between;
+  &Adaptive {
+    z-index: 12;
+    display: flex;
+    align-items: center;
+    div {
+      margin-top: 5px;
+    }
+    @media screen and (min-width: 769px) {
+      display: none;
+    }
+    cursor: pointer;
+    a {
+      cursor: inherit;
+      margin-left: 10px;
+      text-transform: uppercase;
+      font-size: 20px;
+    }
+  }
   .active {
     border-bottom: 1px solid #4C5D87;
+    &Adaptive {
+      color: rgb(84, 96, 204);
+    }
   }
-  // .activeIcon {
-  //   background: #C2E1DC;
-  // }
   &Items {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    cursor: pointer;
+    @media screen and (max-width: 768px) {
+      margin-top: 2px;
+    }
+    &Search {
+      @media screen and (max-width: 768px) {
+        display: none;
+      }
+    }
   }
   &Item {
     margin-right: 45px;
+    @media screen and (max-width: 1000px) {
+      display: none;
+    }
+    &Adaptive {
+      margin-right: 10px;
+      @media screen and (min-width: 1000px) {
+        display: none;
+      }
+      &Search {
+        @media screen and (min-width: 768px) {
+          display: none;
+        }
+      }
+    }
   }
   .menuItem3 {
     margin-right: 0;
