--- a/src/components/Search/filter.module.css
+++ b/src/components/Search/filter.module.css
@@ -12,7 +12,6 @@
 .form input {
     padding: 0 10px;
     width: 250px;
-    max-width: auto;
     border-radius: 10px 0 0 10px;
 }
 
@@ -23,5 +22,18 @@
     border-radius: 0 10px 10px 0;
     transition: .5s;
     padding: 0 10px;
+    color: #fff;
 }
+
+@media screen and (max-width: 768px) {
+    .form input {
+        margin-top: 10px;
+        width: 100%;
+    }
+    .form div {
+        margin-top: 10px;
+    }
+}
+
+
 
