--- a/src/components/Sidebar/styles.module.scss
+++ b/src/components/Sidebar/styles.module.scss
@@ -10,6 +10,9 @@ $fz: 12px;
   color: #FFFFFF;
   &Title {
     margin-bottom: 50px;
+    @media screen and (max-width: 768px) {
+      display: none;
+    }
   }
   li {
     margin-top: 30px;
@@ -25,9 +28,15 @@ $fz: 12px;
   li:nth-child(7) {
     margin-top: 99px;
   }
-  @media screen and (max-width: 992px) {
-      width: 200px;
-    }
+  @media screen and (max-width: 1000px) {
+    width: 200px;
+  }
+  @media screen and (max-width: 768px) {
+    display: none;
+    color: rgb(84, 96, 204);
+    padding-top: 38px;
+    background: rgb(202, 202, 228);
+  }
 }
 
 
